--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Momen Zakaria - UX Designer & Front-End Developer</title>
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="../../cdns/css/bootstrap.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap.css">
     <link rel="stylesheet" href="stylesheets/style.css">
     <!-- Scripts -->
-    <script src="../../cdns/scripts/jquery-2.1.3.min.js"></script>
-    <script src="../../cdns/scripts/bootstrap.js"></script>
+    <script src="scripts/jquery-2.1.3.min.js"></script>
+    <script src="scripts/bootstrap.js"></script>
     
 </head>
 
